Update to Next.js 12 and Tailwind 3

--- a/packages/docs/pages/guide/create-react-app-and-growthbook.mdx
+++ b/packages/docs/pages/guide/create-react-app-and-growthbook.mdx
@@ -17,7 +17,7 @@ Then open `http://localhost:3000/` and make sure the app is working
 In this tutorial assume you are using the cloud-hosted version of GrowthBook, which is free for small teams, but you can
 also use the open source version and host it yourself if you prefer.
 
-<div class="bg-blue-50 py-3 mb-5 px-4 text-gray-600 border-l-8 border-blue-200 dark:bg-blue-800 dark:text-gray-50">
+<div className="bg-blue-50 py-3 mb-5 px-4 text-gray-600 border-l-8 border-blue-200 dark:bg-blue-800 dark:text-gray-50">
   GrowthBook uses the concept of Feature Flagging to run A/B tests. Basically,
   you wrap the code you want to test in a conditional check{" "}
   <pre>if (feature.on) ...</pre>and then you run an A/B test within GrowthBook
