--- a/packages/docs/pages/guide/mixpanel.mdx
+++ b/packages/docs/pages/guide/mixpanel.mdx
@@ -114,7 +114,7 @@ The project token can be found in the Mixpanel Project Settings.
 You will still need to implement the feature flagging side of GrowthBook, where the feature JSON is fetched and other user
 attributes defined. This implementation instructions can be found for each specific language.
 
-<div class="bg-blue-50 py-3 mb-5 px-4 text-gray-600 border-l-8 border-blue-200 dark:bg-blue-800 dark:text-gray-50">
+<div className="bg-blue-50 py-3 mb-5 px-4 text-gray-600 border-l-8 border-blue-200 dark:bg-blue-800 dark:text-gray-50">
   By default, Mixpanel stores all events as UTC time, but can be changed per
   project. If the timezones between GrowthBook and your Mixpanel don't match, it
   can cause results to not show data for the correct time period.
