--- a/packages/docs/pages/guide/rudderstack-and-nextjs-with-growthbook.mdx
+++ b/packages/docs/pages/guide/rudderstack-and-nextjs-with-growthbook.mdx
@@ -147,7 +147,7 @@ const growthbook = new GrowthBook({
 });
 ```
 
-<div class="bg-blue-50 py-3 mb-5 px-4 text-gray-600 border-l-8 border-blue-200 dark:bg-blue-800 dark:text-gray-50">
+<div className="bg-blue-50 py-3 mb-5 px-4 text-gray-600 border-l-8 border-blue-200 dark:bg-blue-800 dark:text-gray-50">
   Note: the names `experiment Viewed`, `experimentId` and `variationId` will be
   mapped to `experiment_id` and `variation_id` columns in the
   `experiment_viewed` table within BigQuery
