--- a/packages/docs/pages/index.mdx
+++ b/packages/docs/pages/index.mdx
@@ -3,33 +3,37 @@
 GrowthBook is an open-source platform for feature flagging and a/b testing built for data teams, engineers, and product managers.
 It's great whether you're looking to just analyze experiment results or looking to make it easier to deploy code.
 
-<div class="bg-blue-50 py-3 mb-5 px-4 font-semibold text-gray-600 border-l-8 border-blue-200 dark:bg-blue-800 dark:text-gray-50">
+<div className="bg-blue-50 py-3 mb-5 px-4 font-semibold text-gray-600 border-l-8 border-blue-200 dark:bg-blue-800 dark:text-gray-50">
   Got questions? We would love to help you get started with GrowthBook. You can
   book time directly with us, or chat to us on slack
   <br />
   <br />
-  <a href="https://calendly.com/growthbook" class="mr-2">
+  <a href="https://calendly.com/growthbook" className="mr-2">
     Meet with us
   </a>
   or
-  <a href="https://slack.growthbook.io?ref=docs-home" class="ml-2 mr-2">
+  <a href="https://slack.growthbook.io?ref=docs-home" className="ml-2 mr-2">
     Join our Slack
   </a>
 </div>
 
-<div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-  <a href="/self-host" class="no-underline" style={{ textDecoration: "none" }}>
-    <div class="p-4 rounded-lg text-white bg-gradient-to-b from-blue-400 to-blue-500 no-underline text-center">
+<div className="grid grid-cols-1 md:grid-cols-3 gap-4">
+  <a
+    href="/self-host"
+    className="no-underline"
+    style={{ textDecoration: "none" }}
+  >
+    <div className="p-4 rounded-lg text-white bg-gradient-to-b from-blue-400 to-blue-500 no-underline text-center">
       How to Self-Host
     </div>
   </a>
-  <a href="/lib" class="no-underline" style={{ textDecoration: "none" }}>
-    <div class="p-4 rounded-lg text-white bg-gradient-to-b from-purple-400 to-purple-500 no-underline text-center">
+  <a href="/lib" className="no-underline" style={{ textDecoration: "none" }}>
+    <div className="p-4 rounded-lg text-white bg-gradient-to-b from-purple-400 to-purple-500 no-underline text-center">
       SDK Docs
     </div>
   </a>
-  <a href="/faq" class="no-underline" style={{ textDecoration: "none" }}>
-    <div class="p-4 rounded-lg text-white bg-gradient-to-b from-purple-500 to-purple-600 no-underline text-center">
+  <a href="/faq" className="no-underline" style={{ textDecoration: "none" }}>
+    <div className="p-4 rounded-lg text-white bg-gradient-to-b from-purple-500 to-purple-600 no-underline text-center">
       Frequently Asked Questions
     </div>
   </a>
