--- a/packages/docs/pages/overview.mdx
+++ b/packages/docs/pages/overview.mdx
@@ -90,19 +90,23 @@ This is best for companies that already have a robust process for running experi
 
 ## Next Steps
 
-<div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-  <a href="/self-host" class="no-underline" style={{ textDecoration: "none" }}>
-    <div class="p-4 rounded-lg text-white bg-gradient-to-b from-blue-400 to-blue-500 no-underline text-center">
+<div className="grid grid-cols-1 md:grid-cols-3 gap-4">
+  <a
+    href="/self-host"
+    className="no-underline"
+    style={{ textDecoration: "none" }}
+  >
+    <div className="p-4 rounded-lg text-white bg-gradient-to-b from-blue-400 to-blue-500 no-underline text-center">
       How to Self-Host
     </div>
   </a>
-  <a href="/lib" class="no-underline" style={{ textDecoration: "none" }}>
-    <div class="p-4 rounded-lg text-white bg-gradient-to-b from-purple-400 to-purple-500 no-underline text-center">
+  <a href="/lib" className="no-underline" style={{ textDecoration: "none" }}>
+    <div className="p-4 rounded-lg text-white bg-gradient-to-b from-purple-400 to-purple-500 no-underline text-center">
       SDK Docs
     </div>
   </a>
-  <a href="/faq" class="no-underline" style={{ textDecoration: "none" }}>
-    <div class="p-4 rounded-lg text-white bg-gradient-to-b from-purple-500 to-purple-600 no-underline text-center">
+  <a href="/faq" className="no-underline" style={{ textDecoration: "none" }}>
+    <div className="p-4 rounded-lg text-white bg-gradient-to-b from-purple-500 to-purple-600 no-underline text-center">
       Frequently Asked Questions
     </div>
   </a>
