Minor tweak to Rudderstack documentation

--- a/packages/docs/pages/guide/rudderstack-and-nextjs-with-growthbook.mdx
+++ b/packages/docs/pages/guide/rudderstack-and-nextjs-with-growthbook.mdx
@@ -19,7 +19,8 @@ From within your Rudderstack account, create a new JS source.
 />
 
 Name the source whatever you like, in this example I'm using `GrowthBook JS`. When the source is created, connect it to
-your BigQuery data warehouse (or whatever destination you're using for GrowthBook experiment data) by clicking on `Add Destination`.
+your BigQuery data warehouse (or whatever destination you're using for GrowthBook experiment data). You can read more
+about how to connect to your data destination [here](/guide/rudderstack).
 
 <img
   src="/images/guides/rudderstack-8-source-w-destination.png"
@@ -245,3 +246,5 @@ export default function MyApp({ Component, pageProps }) {
   );
 }
 ```
+
+Once you have data flowing into Rudderstack, you can set it up to work with GrowthBook by following the [Rudderstack guide](/guide/rudderstack)
