Added Matomo guide to the documentation

--- a/packages/docs/pages/guide/index.mdx
+++ b/packages/docs/pages/guide/index.mdx
@@ -17,6 +17,7 @@ The following sections contain detailed walk through on how to set up GrowthBook
 - [Google Analytics - UA](/guide/GA-universal-analytics)
 - [Mixpanel](/guide/mixpanel)
 - [Rudderstack](/guide/rudderstack)
+- [Matomo](/guide/matomo)
 
 ## Coming soon:
 
