Added Matomo to predefined schemas

--- a/packages/docs/pages/app/datasources.mdx
+++ b/packages/docs/pages/app/datasources.mdx
@@ -31,7 +31,8 @@ GrowthBook supports a few popular database schemas out-of-the-box:
 
 - Segment
 - Snowplow
-- RudderStack
+- [RudderStack](/guide/rudderstack)
+- [Matomo](/guide/matomo)
 - Amplitude (Snowflake only)
 - Google Analytics 4 (BigQuery only)
 
