--- a/packages/docs/pages/self-host/config.mdx
+++ b/packages/docs/pages/self-host/config.mdx
@@ -46,6 +46,10 @@ growthbook:
 - **JWT_SECRET** - Auth signing key (use a long random string)
 - **ENCRYPTION_KEY** - Data source credential encryption key (use a long random string)
 
+<div className="bg-blue-50 py-3 mb-5 px-4 font-semibold text-gray-600 border-l-8 border-blue-200 dark:bg-blue-800 dark:text-gray-50">
+  When using GrowthBook in production, it is important to change the `NODE_ENV` to to `production` and change the `JWT_SECRET` to a random string. Using the `production` node environment and the default `JWT_SECRET` will throw an error.
+</div>
+
 ### Email SMTP Settings
 
 This is required in order to send experiment alerts, team member invites, and reset password emails.
