--- a/packages/docs/pages/self-host/config.mdx
+++ b/packages/docs/pages/self-host/config.mdx
@@ -46,8 +46,8 @@ growthbook:
 - **JWT_SECRET** - Auth signing key (use a long random string)
 - **ENCRYPTION_KEY** - Data source credential encryption key (use a long random string)
 
-<div className="bg-blue-50 py-3 mb-5 px-4 font-semibold text-gray-600 border-l-8 border-blue-200 dark:bg-blue-800 dark:text-gray-50">
-  When using GrowthBook in production, it is important to change the `NODE_ENV` to to `production` and change the `JWT_SECRET` to a random string. Using the `production` node environment and the default `JWT_SECRET` will throw an error.
+<div className="bg-blue-50 py-3 mb-5 px-4 text-gray-600 border-l-8 border-blue-200 dark:bg-blue-800 dark:text-gray-50">
+  When using GrowthBook in production, it is important to change the <code>NODE_ENV</code> to to "production" and change the <code>JWT_SECRET</code> to a random string. Using the <code>production</code> node environment and the default <code>JWT_SECRET</code> will throw an error.
 </div>
 
 ### Email SMTP Settings
