New data source form and support for Matomo, Jitsu, Firebase, Heap, and Fresh Paint (#474)

--- a/packages/docs/pages/self-host/config.mdx
+++ b/packages/docs/pages/self-host/config.mdx
@@ -47,7 +47,10 @@ growthbook:
 - **ENCRYPTION_KEY** - Data source credential encryption key (use a long random string)
 
 <div className="bg-blue-50 py-3 mb-5 px-4 text-gray-600 border-l-8 border-blue-200 dark:bg-blue-800 dark:text-gray-50">
-  When using GrowthBook in production, it is important to change the <code>NODE_ENV</code> to to "production" and change the <code>JWT_SECRET</code> to a random string. Using the <code>production</code> node environment and the default <code>JWT_SECRET</code> will throw an error.
+  When using GrowthBook in production, it is important to change the{" "}
+  <code>NODE_ENV</code> to to "production" and change the{" "}
+  <code>JWT_SECRET</code> to a random string. Using the <code>production</code>{" "}
+  node environment and the default <code>JWT_SECRET</code> will throw an error.
 </div>
 
 ### Email SMTP Settings
