Fixes for Cloud Enterprise SSO and Google Auth

--- a/packages/docs/pages/self-host/env.mdx
+++ b/packages/docs/pages/self-host/env.mdx
@@ -101,19 +101,21 @@ Some features in self-hosted GrowthBook are only available with an Enterprise li
 - **LICENCE_KEY** - Your signed licence key provided by the GrowthBook team
 - **SSO_CONFIG** - A JSON-encoded string that configures SSO (using OpenID Connect). It should be an object with the following keys:
   - `clientId` (string)
+  - `clientSecret` (string, optional)
   - `metadata` (object)
+    - `issuer` (string)
     - `authorization_endpoint` (string)
     - `end_session_endpoint` (string)
-    - `issuer` (string)
     - `jwks_uri` (string)
     - `id_token_signing_alg_values_supported` (array of strings)
     - `token_endpoint` (string)
   - `emailDomain` (string, optional) - Allow auto-joining from a specified email domain
+  - `extraQueryParams` (object, optional) - Dictionary of query params to be passed along with every OAuth call
 
 For SSO, make sure the following callback URLs are whitelisted:
 
-- `{domain}/oauth/callback`
-- `{domain}/oauth/silent`
+- `{APP_ORIGIN}/oauth/callback`
+- `{APP_ORIGIN}/oauth/silent`
 
 ## Other Settings
 
