--- a/packages/docs/pages/self-host/env.mdx
+++ b/packages/docs/pages/self-host/env.mdx
@@ -101,7 +101,7 @@ Some features in self-hosted GrowthBook are only available with an Enterprise li
 - **LICENCE_KEY** - Your signed licence key provided by the GrowthBook team
 - **SSO_CONFIG** - A JSON-encoded string that configures SSO (using OpenID Connect). It should be an object with the following keys:
   - `clientId` (string)
-  - `clientSecret` (string, optional)
+  - `implicitGrant` (boolean, optional) - defaults to false (PKCE flow)
   - `metadata` (object)
     - `issuer` (string)
     - `authorization_endpoint` (string)
@@ -109,6 +109,7 @@ Some features in self-hosted GrowthBook are only available with an Enterprise li
     - `jwks_uri` (string)
     - `id_token_signing_alg_values_supported` (array of strings)
     - `token_endpoint` (string)
+    - `code_challenge_methods_supported` (array of strings) - Required unless `implicitGrant` is set to true
   - `emailDomain` (string, optional) - Allow auto-joining from a specified email domain
   - `extraQueryParams` (object, optional) - Dictionary of query params to be passed along with every OAuth call
 
