--- a/packages/docs/pages/app/index.mdx
+++ b/packages/docs/pages/app/index.mdx
@@ -7,4 +7,4 @@ The following sections will walk you through the various parts of the GrowthBook
 - Define your [Metrics](/app/metrics) that you can use as goals and guardrails for experiments.
 - Create an [Experiment Analysis](/app/experiments) and view results.
 - Enable our [Visual Editor](/app/visual) (beta) so non-technical teammates can launch experiments without writing code.
-- Integrate with our [API](/app/api) or [Webhooks](/app/webhooks) for a more seamless experience.
+- Integrate with our [API](/apidocs) or [Webhooks](/app/webhooks) for a more seamless experience.
