--- a/packages/docs/pages/app/webhooks.mdx
+++ b/packages/docs/pages/app/webhooks.mdx
@@ -4,7 +4,7 @@ Webhooks are one way to keep cached feature definitions up-to-date on your serve
 
 With **Webhooks**, GrowthBook pushes feature definitions to your servers as soon as they change.
 
-The other way is with the [API](/app/api), where your servers pull feature definitions from GrowthBook in a cronjob (or similar).
+The other way is with the [API](/apidocs), where your servers pull feature definitions from GrowthBook in a cronjob (or similar).
 
 ## Adding a Webhook Endpoint
 
