--- a/packages/docs/pages/overview.mdx
+++ b/packages/docs/pages/overview.mdx
@@ -39,7 +39,7 @@ You can also change the value of a feature with **Override Rules**. The followin
 - **Percentage Rollout** - Use random sampling to roll out a new feature value to a percent of users
 - **A/B Experiment** - Run an A/B test between different feature values
 
-You can pull feature definitions as a JSON file from the [API](/app/api) or setup a [Webhook](/app/webhooks) to push the same JSON to your servers automatically when something changes.
+You can pull feature definitions as a JSON file from the [API](/apidocs) or setup a [Webhook](/app/webhooks) to push the same JSON to your servers automatically when something changes.
 
 This feature definitions JSON is passed into our [SDKs](/lib) along with [user targeting attributes](/app/features#targeting-attributes).
 
