--- a/packages/docs/pages/faq.mdx
+++ b/packages/docs/pages/faq.mdx
@@ -86,7 +86,7 @@ The GrowthBook application is very lightweight and efficient. For most usecases,
 
 GrowthBook only deals with aggregate data and the bulk of the processing is offloaded to your data source. Because of this, you can easily analyze terrabytes of data from your laptop or a small container in the cloud.
 
-If you are using feature flags, we recommend adding a caching layer between the GrowthBook API and your application in production. This could either be a CDN or a local cache server like Redis. Learn more about how to keep a local cache up-to-date using [API polling](/app/api) or [Webhooks](/app/webhooks).
+If you are using feature flags, we recommend adding a caching layer between the GrowthBook API and your application in production. This could either be a CDN or a local cache server like Redis. Learn more about how to keep a local cache up-to-date using [API polling](/apidocs) or [Webhooks](/app/webhooks).
 
 ## I can't upload to S3/getting 400 error when uploading to S3?
 
