--- a/packages/docs/pages/types/index.mdx
+++ b/packages/docs/pages/types/index.mdx
@@ -1,5 +1,5 @@
 # Types
 
-This section describes the more complex types that are used by growthbook.
+This section describes the more complex types that are used by GrowthBook.
 
 - [FeatureRule](/types/feature-rule)
