--- a/packages/docs/pages/guide/nextjs-and-growthbook.mdx
+++ b/packages/docs/pages/guide/nextjs-and-growthbook.mdx
@@ -35,7 +35,7 @@ Visit `http://localhost:4000` and you should see the application running!
 
 ## 2. GrowthBook Account
 
-You will need a GrowthBook account. You can either run GrowthBook locally or using the cloud hosted GrowthBook at https://app.growthbook.io. If you are using the GrowthBook cloud, you can skip to step 3. If you are installing it locally, here is the quick start instructions - or you can follow the [self hosting](/self-host) instructions.
+You will need a GrowthBook account. You can either run GrowthBook locally or using the cloud hosted GrowthBook at [https://app.growthbook.io](https://app.growthbook.io). If you are using the GrowthBook cloud, you can skip to step 3. If you are installing it locally, here is the quick start instructions - or you can follow the [self hosting](/self-host) instructions.
 
 ```bash
 git clone https://github.com/growthbook/growthbook.git
