--- a/packages/docs/pages/lib/build-your-own.mdx
+++ b/packages/docs/pages/lib/build-your-own.mdx
@@ -1,6 +1,6 @@
 # Build Your Own SDK
 
-**Latest spec version: 0.2.1 [View Changelog](#changelog)**
+**Latest spec version: 0.2.2 [View Changelog](#changelog)**
 
 This guide is meant for library authors looking to build a GrowthBook SDK in a currently unsupported language.
 
@@ -816,3 +816,5 @@ Open a [GitHub issue](https://github.com/growthbook/growthbook/issues) with a li
   - Add `featureId` to ExperimentResult object
 - **v0.2.1** 2022-08-01
   - Add test case for when an experiment's hashAttribute is `null`
+- **v0.2.2** 2022-09-08
+  - Add test case for when an experiment's hashAttribute is an integer
