Update docs for self-hosted SSO

--- a/packages/docs/pages/self-host/env.mdx
+++ b/packages/docs/pages/self-host/env.mdx
@@ -101,7 +101,8 @@ Some features in self-hosted GrowthBook are only available with an Enterprise li
 - **LICENCE_KEY** - Your signed licence key provided by the GrowthBook team
 - **SSO_CONFIG** - A JSON-encoded string that configures SSO (using OpenID Connect). It should be an object with the following keys:
   - `clientId` (string)
-  - `implicitGrant` (boolean, optional) - defaults to false (PKCE flow)
+  - `clientSecret` (string)
+  - `emailDomain` (string, optional) - Allow auto-joining from a specified email domain
   - `metadata` (object)
     - `issuer` (string)
     - `authorization_endpoint` (string)
@@ -109,14 +110,15 @@ Some features in self-hosted GrowthBook are only available with an Enterprise li
     - `jwks_uri` (string)
     - `id_token_signing_alg_values_supported` (array of strings)
     - `token_endpoint` (string)
-    - `code_challenge_methods_supported` (array of strings) - Required unless `implicitGrant` is set to true
-  - `emailDomain` (string, optional) - Allow auto-joining from a specified email domain
-  - `extraQueryParams` (object, optional) - Dictionary of query params to be passed along with every OAuth call
+    - `code_challenge_methods_supported` (array of strings)
+  - `extraQueryParams` (object, optional) - Dictionary of extra query params to be passed along with the `/authorize` OAuth call
+  - `additionalScope` (string, optional) - Additional scopes to include, along with the default value: `openid profile email`
 
-For SSO, make sure the following callback URLs are whitelisted:
+For SSO, make sure the following callback URL is whitelisted:
 
 - `{APP_ORIGIN}/oauth/callback`
-- `{APP_ORIGIN}/oauth/silent`
+
+For the best SSO user experience, enable offline access and refresh tokens in your Identity Provder.
 
 ## Other Settings
 
