Fixes from code review

--- a/packages/docs/pages/self-host/env.mdx
+++ b/packages/docs/pages/self-host/env.mdx
@@ -106,11 +106,11 @@ Some features in self-hosted GrowthBook are only available with an Enterprise li
   - `metadata` (object)
     - `issuer` (string)
     - `authorization_endpoint` (string)
-    - `end_session_endpoint` (string)
     - `jwks_uri` (string)
     - `id_token_signing_alg_values_supported` (array of strings)
     - `token_endpoint` (string)
     - `code_challenge_methods_supported` (array of strings)
+    - `logout_endpoint` (string, optional)
   - `extraQueryParams` (object, optional) - Dictionary of extra query params to be passed along with the `/authorize` OAuth call
   - `additionalScope` (string, optional) - Additional scopes to include, along with the default value: `openid profile email`
 
