--- a/packages/docs/pages/integrations/index.mdx
+++ b/packages/docs/pages/integrations/index.mdx
@@ -1,7 +1,7 @@
 # GrowthBook integrations
 
 GrowthBook plans on supporting more integrations in the near future. If you have a suggestion for an integration,
-please let us know in our [Community Slack](https://join.slack.com/t/growthbookusers/shared_invite/zt-1eh2bjeep-sDrAhci_3sWGwsx_hsay0Q)
+please let us know in our [Community Slack](https://slack.growthbook.io?ref=docs-integrations)
 or via email at support@growthbook.io.
 
 ## Integrations list
