Change docs to reference new default

--- a/packages/docs/pages/app/datasources.mdx
+++ b/packages/docs/pages/app/datasources.mdx
@@ -97,7 +97,7 @@ There are 2 **Attribution Models** that experiments can use:
 - **First Exposure** uses a single conversion window based on the first time the user sees a particular experiment
 - **All Exposures** uses multiple conversion windows, one for each time the user sees an experiment
 
-By default, all new analyses will use the "All Exposures" model. You can change this on a per-experiment basis as needed.
+Currently, all analyses will use the "First Exposure" model by default. You can change this on a per-experiment basis as needed.
 
 ##### Experiment Dimensions
 
