Full ratio metric support using the Delta method Fixes #495
Currently, we only support ratio metrics where the denominator is `binomial`.

This adds support for when the denominator is a `count` metric. Variance correction is done using the Delta method.

Some example metrics that will become possible with this change:
- **Average Order Value (AOV)** (# orders is the denominator)
- **Pages per Session** (# sessions is the denominator)
- **Average Visit Duration** (# visits is the denominator)
- **Click Through Rate (CTR)** (# impressions is the denominator)

--- a/packages/docs/pages/app/metrics.mdx
+++ b/packages/docs/pages/app/metrics.mdx
@@ -80,14 +80,28 @@ WHERE
 
 By default, metrics are evaluated against all users in an experiment: `(# users who converted) / (# users in experiment)`
 
-You can instead choose another metric to use as the denominator. This acts just like an "activation metric" in an experiment to filter the list of users who are included in the analysis to those who first convert on the denominator metric.
+You can instead choose another metric to use as the denominator.
 
-For example, it's common to have multiple metrics related to revenue, all selecting the exact same data but with different denominators:
+##### Funnel Metrics
 
-- **Revenue per User** - default denominator of "All Users in Experiment"
-- **Average Order Value** - denominator set to a metric which only includes paying customers.
+When the denominator is a simple binomial (conversion) metric, then it acts just like an "activation metric" in an experiment. It filters the users who are included in the analysis to those who first convert on this denominator metric.
 
-Another common example is a funnel conversion metric like `Add To Cart -> Start Checkout` or `Signup Completion Rate`.
+For example, if you want to look at what percent of users checkout after viewing a cart, it can be described as `% checkout / % viewed cart`. This requires creating two metrics:
+
+1. `Viewed Cart` - selects all users who viewed a cart
+2. `Viewed Cart -> Checkout` - selects all users who checked out and picks `Viewed Cart` as the denominator.
+
+##### Ratio Metrics
+
+When the denominator is a count metric, then things are a little different. Instead of acting like a filter, we calculate both metrics and treat the value as a ratio.
+
+- The mean is `sum(metric) / sum(denominator)`
+- The standard deviation is calculated using the **Delta method**
+
+For example, if you want to look at the Average Order Value (AOV), what you're really looking for is `total revenue / number of orders`. This also requires creating two metrics:
+
+1. `Orders per User` - selects the count of orders for each user
+2. `AOV` - selects total revenue per user and picks `Orders per User` as the denominator.
 
 ### 2. Javascript (Mixpanel only)
 
