--- a/packages/docs/pages/self-host/env.mdx
+++ b/packages/docs/pages/self-host/env.mdx
@@ -20,6 +20,25 @@ growthbook:
     - API_HOST=http://<my ip>:3100
 ```
 
+<div className="bg-blue-50 py-3 mb-5 px-4 text-gray-600 border-l-8 border-blue-200 dark:bg-blue-800 dark:text-gray-50">
+  <p>
+    <strong>Important</strong>: In order for authentication cookies to work
+    correctly, both the app and api domains must be considered the &quot;same
+    site&quot;. They can be on different subdomains or ports, but the root
+    domain must be the same.
+  </p>
+  <ul>
+    <li>
+      <strong>Works:</strong> <code>gb.example.com</code> and{" "}
+      <code>gb-api.example.com</code>
+    </li>
+    <li>
+      <strong>Breaks:</strong> <code>gb-example.com</code> and{" "}
+      <code>gb-api-example.com</code>
+    </li>
+  </ul>
+</div>
+
 If you need to change the ports on your local dev environment (e.g. if `3000` is already being used),
 you need to update the above variables AND change the port mapping in `docker-compose.yml`:
 
