--- a/packages/docs/pages/app/api.mdx
+++ b/packages/docs/pages/app/api.mdx
@@ -1,4 +1,18 @@
-# Definitions
+# API
+
+The API is one way to keep cached features up-to-date on your servers.
+
+With the **API**, your servers pull feature definitions from GrowthBook in a cronjob (or similar).
+
+With [Webhooks](/app/webhooks), GrowthBook calls out to your servers as soon as features change in GrowthBook.
+
+## Environments and API Keys
+
+When you first start setting up features in GrowthBook, we create a "production" environment for you with an API key.
+
+You can add new environments by going to **Settings -> Environments**.
+
+## Feature Definitions Endpoint
 
 The primary API endpoint is for fetching feature definitions.
 
@@ -34,7 +48,7 @@ The `status` field mirrors the HTTP status. The `features` field has feature def
 
 Each feature definition has a default value and optional rules that override the value based on targeting conditions. Rules can also be experiments or rollouts where values are randomly assigned to users.
 
-## Project-scoping
+### Project-scoping
 
 If you've set up multiple projects within GrowthBook, you can optionally add a querystring to this endpoint to only include features in a specific project. By default, features from all projects are returned.
 
@@ -45,3 +59,15 @@ For example:
 ```
 /api/features/key_dev_abc123?project=prj_456def
 ```
+
+## Official SDKs
+
+We offer official SDKs that work with these data structures in a few popular languages with more coming soon.
+
+- [Javascript/Typescript](/lib/js)
+- [React](/lib/react)
+- [Go](/lib/go)
+- [PHP](/lib/php)
+- [Python](/lib/python)
+- [Kotlin (Android)](/lib/kotlin)
+- [Build your own](/lib/build-your-own)
