Added MS SQL to the docs

--- a/packages/docs/pages/app/datasources.mdx
+++ b/packages/docs/pages/app/datasources.mdx
@@ -12,7 +12,8 @@ Below are the currently supported Data Sources:
 - ClickHouse
 - AWS Athena
 - Postgres
-- MySQL/MariaDB
+- MySQL/MariaDB'
+- MsSQL/SQL Server
 - PrestoDB (and Trino)
 - [Mixpanel](/guide/mixpanel)
 - Google Analytics
