--- a/packages/docs/pages/app/datasources.mdx
+++ b/packages/docs/pages/app/datasources.mdx
@@ -116,7 +116,7 @@ SELECT user_id, device_id FROM logins
 
 ##### SQL Template Variables
 
-Within your queries, there are several placeholder variables you can use. These will be replaced with strings before being run based on your experiment. This can be useful for giving hints to SQL optimization engines to improve query performance.
+Within your queries, there are several placeholder variables you can use. These will be replaced with strings before being run based on your experiment. This are completely optional, but can be useful for giving hints to SQL optimization engines to improve query performance.
 
 The variables are:
 
@@ -130,6 +130,7 @@ The variables are:
 - **endMonth** - Just the `MM` of the endDate
 - **endDay** - Just the `DD` of the endDate
 - **endDateUnix** - Unix timestamp of the endDate (seconds since Jan 1, 1970)
+- **experimentId** - Either a specific experiment id OR `%` if you should include all experiments
 
 For example:
 
@@ -144,6 +145,7 @@ FROM
   experiment_viewed
 WHERE
   received_at BETWEEN '{{ startDate }}' AND '{{ endDate }}'
+  AND experiment_id LIKE '{{ experimentId }}'
 ```
 
 **Note:** The inserted values do not have surrounding quotes, so you must add those yourself (e.g. use `'{{ startDate }}'` instead of just `{{ startDate }}`)
