--- a/packages/docs/pages/app/metrics.mdx
+++ b/packages/docs/pages/app/metrics.mdx
@@ -57,10 +57,13 @@ The variables are:
 - **startYear** - Just the `YYYY` of the startDate
 - **startMonth** - Just the `MM` of the startDate
 - **startDay** - Just the `DD` of the startDate
+- **startDateUnix** - Unix timestamp of the startDate (seconds since Jan 1, 1970)
 - **endDate** - `YYYY-MM-DD HH:mm:ss` of the latest data that needs to be included
 - **endYear** - Just the `YYYY` of the endDate
 - **endMonth** - Just the `MM` of the endDate
 - **endDay** - Just the `DD` of the endDate
+- **endDateUnix** - Unix timestamp of the endDate (seconds since Jan 1, 1970)
+- **experimentId** - Either a specific experiment id OR `%` if you should include all experiments
 
 For example:
 
