--- a/packages/docs/pages/app/datasources.mdx
+++ b/packages/docs/pages/app/datasources.mdx
@@ -116,7 +116,7 @@ SELECT user_id, device_id FROM logins
 
 ##### SQL Template Variables
 
-Within your queries, there are several placeholder variables you can use. These will be replaced with strings before being run based on your experiment. This are completely optional, but can be useful for giving hints to SQL optimization engines to improve query performance.
+Within your queries, there are several placeholder variables you can use. These will be replaced with strings before being run based on your experiment. This can be useful for giving hints to SQL optimization engines to improve query performance.
 
 The variables are:
 
