change feature return shape

--- a/packages/docs/components/features/FeatureAttributes.mdx
+++ b/packages/docs/components/features/FeatureAttributes.mdx
@@ -1,15 +1,17 @@
 ## Attributes
 
-| Attribute           | Type    | Description                            |
-| ------------------- | ------- | -------------------------------------- |
-| id                  | string  | The unique identifier of the feature   |
-| archived            | boolean | Whether the feature is archived or not |
-| description         | string  | A description of the feature           |
-| owner               | string  | The owner of the feature               |
-| project             | string  | The project the feature belongs to     |
-| dateCreated         | string  | The date the feature was created       |
-| dateUpdated         | string  | The date the feature was last updated  |
-| valueType           | string  | The type of the feature value          |
-| defaultValue        | string  | The default value of the feature       |
-| tags                | array   | An array of tags                       |
-| environmentSettings | object  | The environment settings               |
+| Attribute         | Type    | Description                             |
+| ----------------- | ------- | --------------------------------------- |
+| id                | string  | The unique identifier of the feature    |
+| archived          | boolean | Whether the feature is archived or not  |
+| description       | string  | A description of the feature            |
+| owner             | string  | The owner of the feature                |
+| project           | string  | The project the feature belongs to      |
+| dateCreated       | string  | The date the feature was created        |
+| dateUpdated       | string  | The date the feature was last updated   |
+| valueType         | string  | The type of the feature value           |
+| defaultValue      | string  | The default value of the feature        |
+| tags              | array   | An array of tags                        |
+| environments      | object  | The environment settings                |
+| draftEnvironments | object  | The draft environment settings          |
+| definition        | object  | The feature definition used by the SDKs |
